Demand re-issuing of new TA certificate when the current one if about to expire